# nireco_image_anomaly_detection

./: readme.md
1_train_jupyterlab_docker/: docker-compose.yml
1_train_jupyterlab_docker/docker/: Dockerfile  requirements.txt
1_train_jupyterlab_docker/work/script/: EfficientAD.ipynb  PaDiM.ipynb  PatchCore.ipynb  VAE.ipynb
2_jetson_docker/: docker-compose.yml
2_jetson_docker/docker/: Dockerfile.jetson  requirements.txt
2_jetson_docker/work/: convtrt.py  retrain.py
2_jetson_docker/work/model_class/: vae.py
3_jetson_infer/source/efficientadd/: CMakeLists.txt  main.cpp
3_jetson_infer/source/padim/: CMakeLists.txt  main.cpp
3_jetson_infer/source/patchcore/: CMakeLists.txt  main.cpp
3_jetson_infer/source/vae/: CMakeLists.txt  main.cpp
documents/: 0_environment.md  1_pipeline.md  2_models.md  3_structure.md
